--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--===== MAIN JS =====-->
-    <script src="assets/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
