--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <g mask="url(#mask0)">
                         <path
                             d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
-                        <image class="home__blob-img" x="50" y="60" href="assets/img/Photo_from_Rp_-removebg.png" />
+                        <image class="home__blob-img" x="50" y="60" href="Photo_from_Rp_-removebg.png" />
                     </g>
                 </svg>
             </div>
@@ -76,7 +76,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/IMG20250205185148.png" alt="">
+                    <img src="IMG20250205185148.png" alt="">
                 </div>
 
                 <div>
@@ -149,7 +149,7 @@
 
                 </div>
                 <div>
-                    <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                    <img src="work3.jpg" alt="" class="skills__img">
                 </div>
             </div>
 
@@ -163,22 +163,22 @@
 
             <div class="work__container bd-grid">
                 <a href="" class="work__img">
-                    <img src="assets/img/work1.jpg" alt="">
+                    <img src="work1.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="assets/img/work2.jpg" alt="">
+                    <img src="work2.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="assets/img/work3.jpg" alt="">
+                    <img src="work3.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="assets/img/work4.jpg" alt="">
+                    <img src="work4.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="assets/img/work5.jpg" alt="">
+                    <img src="work5.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="assets/img/work6.jpg" alt="">
+                    <img src="work6.jpg" alt="">
                 </a>
             </div>
         </section>
@@ -200,13 +200,13 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
-        <p class="footer__title">Marlon</p>
+        <p class="footer__title">Portfolio</p>
         <div class="footer__social">
             <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-instagram'></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-twitter'></i></a>
         </div>
-        <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
+        <p class="footer__copy">&#169; Quicksnippet. All rigths reserved</p>
     </footer>
 
 
