--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rp Singh !</span><br> Web Developer
                 </h1>
 
-                <a href="#" class="button">Hire Me</a>
+                <a href="#" class="button_hire">Hire Me</a>
             </div>
 
             <div class="home__social">
@@ -192,7 +192,7 @@
                     <input type="text" placeholder="Name" class="contact__input">
                     <input type="mail" placeholder="Email" class="contact__input">
                     <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                    <input type="button" value="Enviar" class="contact__button button">
+                    <input type="button" value="Sumbit asshole" class="contact__button button">
                 </form>
             </div>
         </section>
