--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rp Singh !</span><br> Web Developer
                 </h1>
 
-                <a href="#" class="button_hire">Hire Me</a>
+                <a href="#" class="button">Hire Me</a>
             </div>
 
             <div class="home__social">
