--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <input type="text" placeholder="Name" class="contact__input">
                     <input type="mail" placeholder="Email" class="contact__input">
                     <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                    <input type="button" value="Enviar" class="contact__button button">
+                    <input type="button" value="Sumbit" class="contact__button button">
                 </form>
             </div>
         </section>
@@ -200,7 +200,7 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
-        <p class="footer__title">Email:Quicksnippet74@gmail.com</p>
+        <p>Email:Quicksnippet74@gmail.com</p>
         <div class="footer__social">
             <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-instagram'></i></a>
