--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="IMG20250205185148.png" alt="">
+                    <img src="About-image.png" alt="">
                 </div>
 
                 <div>
